# StochasticSimulator

./: Cargo.toml  entity.csv  flake.nix  gillespie.csv  perf.data  plot.py  proba.txt  results.csv  test_input.txt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2naqqqwk4w92yrqjqcsan0yfq5b1l13g-source  3bg8dxpjbgia6ra47p66dxqngzj7pqfs-source  5hr0jldah98js4jmviv2rk942f5dnlbi-source  gfnx3l09q9jhmlq4smyrqnyfjp624pz3-source  p9kgs48pra3v0zzrkr38fknfi7h6l86l-source  xh3nb5d2873a3006yfgw5sxn0kkivsav-source
collision_handler/: Cargo.toml
collision_handler/src/: lib.rs
entity_centered/: Cargo.toml  architecture.txt  results.csv
entity_centered/src/: collided_molecule.rs  element.rs  main.rs  molecule.rs  moved_molecule.rs  probability.rs  reaction_registry.rs  simulation.rs  value_board.rs  vector.rs
gillespie/: .~lock.results.csv#  Cargo.toml  results.csv
gillespie/src/: main.rs  probability.rs  reaction_registry.rs  value_board.rs
parser/src/: brenda_parser_helpers.rs  lib.rs  parser_combinator.rs
simulation_parser/: Cargo.toml
simulation_parser/src/: brenda_parser_helpers.rs  lib.rs  parser_combinator.rs
