[package]
name = "entity_centered"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
simulation_parser = { path = "../simulation_parser" }
# rand = { workspace = true }
itertools = { workspace = true }
rayon = "1.10.0"
rustc-hash = "1.1.0"
smallvec = "1.13.2"
mimalloc = "0.1.39"
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
fastrand = "2.0.2"
typed-arena = "2.0.2"
