[package]
name = "gillespie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
simulation_parser = { path = "../simulation_parser" }
fastrand = { workspace = true }
itertools = { workspace = true }
clap = { workspace = true }
